<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
    <TextView  
	android:id="@+id/logo"
	android:typeface="serif"
	android:textSize="20dip"
    android:layout_width="fill_parent" 
    android:layout_height="24dip" 
    android:text="@string/findjamtop"
    android:gravity="center_horizontal"
    />
    <TextView  
	android:id="@+id/locationtextview"
	android:paddingTop = "6dip"
	android:gravity="left"
	android:typeface="serif"
	android:textSize="16dip"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/findjamlocation"
    />
    <Button
    android:id="@+id/findme"
    android:layout_width="fill_parent"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:text="@string/findme"
    />
    <TextView  
	android:id="@+id/contenttextview"
	android:paddingTop = "6dip"
	android:gravity="left"
	android:typeface="serif"
	android:textSize="16dip"
    android:layout_width="fill_parent" 
    android:layout_height="24dip" 
    android:text="@string/findjamcontent"
    />
    <Button
    android:id="@+id/findme"
    android:layout_width="fill_parent"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:text="@string/findcontent"
    />
    <EditText
    android:id="@+id/contentedittext"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:maxLines="2"
    android:minLines="1"
    />
    <TextView  
	android:id="@+id/usertextview"
	android:paddingTop = "6dip"
	android:gravity="left"
	android:typeface="serif"
	android:textSize="16dip"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/findjamuser"
    />
    <EditText
    android:id="@+id/useredittext"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:maxLines="2"
    android:minLines="1"
    />
    <Button
    android:id="@+id/finduser"
    android:layout_width="fill_parent"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:text="@string/finduser"
    />  
    
</LinearLayout>
