<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
              android:orientation="vertical" >
  <TextView  
	android:id="@+id/logo"
	android:typeface="serif"
	android:textSize="32dip"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/logo"
    android:gravity="center_horizontal"
    />
    <LinearLayout
    android:layout_width = "fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight = "1"
    android:gravity = "center"
    >
  	   <Button
  		android:id="@+id/findjam"
  		android:text="@string/findjam"
  		android:layout_width = "fill_parent"
  		android:layout_height = "wrap_content"
  		/>  		
	  	<Button
	  	android:id="@+id/startjam"
	  	android:text="@string/startjam"
	  	android:layout_width = "fill_parent"
	  	android:layout_height = "wrap_content"
	  	/>
	  	<Button
	  	android:id="@+id/myjams"
	  	android:text="@string/myjams"
	  	android:layout_width = "fill_parent"
	  	android:layout_height = "wrap_content"
	  	/>
  	</LinearLayout>
</LinearLayout>
