<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  
    <TextView  
	android:id="@+id/logo"
	android:typeface="serif"
	android:textSize="32dip"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/myjams"
    android:gravity="center_horizontal"
    />
    <TextView  
	android:id="@+id/hosting"
	android:typeface="serif"
	android:textSize="22dip"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hosting"
    android:gravity="left"
    />
        
     <ScrollView
    android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  </LinearLayout>
  </ScrollView>
      <TextView  
	android:id="@+id/attending"
	android:typeface="serif"
	android:textSize="22dip"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/attending"
    android:gravity="left"
    />
         <ScrollView
    android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  </LinearLayout>
  </ScrollView>
  
  
</LinearLayout>